# sipXrouter

./: .gitmodules  configure.ac
config/: general.m4  oss_lib.m4  revision-gen  sipXlib.m4  sipXlib2.m4  sipxconfig-integration-testing.am
mak/: build.mk.in  centos-iso.mk.in  list-dependencies.mk.in  modules.mk  rpm.m4  rpm.mk.in  setup.mk.in
mak/centos-iso/: isolinux.cfg  ks.m4
mak/mock/: centos-6-i386.cfg.in  centos-6-x86_64.cfg.in
sipXcommserverLib/: configure.ac  sipxcommserverlib-ng.spec.in  sipxcommserverlib.spec.in
sipXcommserverLib/etc/: sipxcommserverlib.cf
sipXcommserverLib/include/digitmaps/: MappingRulesUrlMapping.h  UrlMapping.h
sipXcommserverLib/include/persist/: SipPersistentSubscriptionMgr.h
sipXcommserverLib/include/sipdb/: EntityDB.h  EntityRecord.h  MongoDB.h  MongoMod.h  RegBinding.h  RegDB.h  SubscribeDB.h
sipXcommserverLib/src/digitmaps/: MappingRulesUrlMapping.cpp  UrlMapping.cpp
sipXcommserverLib/src/persist/: SipPersistentSubscriptionMgr.cpp
sipXcommserverLib/src/sipdb/: EntityDB.cpp  EntityRecord.cpp  GatewayDestDB.cpp  MongoDB.cpp  MongoMod.cpp  MongoOpLog.cpp  RegBinding.cpp  RegDB.cpp  SubscribeDB.cpp  Subscription.cpp
sipXcommserverLib/src/test/: RegDBTest.cpp
sipXcommserverLib/src/test/sipdb/: EntityDBTest.cpp  RegBindingTest.cpp  RegDBTest.cpp  RegExpireThreadTest.cpp  SubscriptionTest.cpp
sipXkamailio/: ChangeLog  LICENSE  Makefile.am  configure.ac  sipxkamailio-ng.spec.in  sipxkamailio.spec.in
sipXkamailio/config/: revision-gen  sipXlib.m4  sipXlib2.m4
sipXkamailio/include/: Makefile.am
sipXkamailio/include/DialogEventCollator/: DialogCollator.h  DialogCollatorPlugin.h  DialogInfo.h
sipXkamailio/include/MessageQueue/: MessageQueuePlugin.h  RedisSubscribeQueue.h
sipXkamailio/src/: Makefile.am
sipXkamailio/src/DialogEventCollator/: DialogCollator.cpp  DialogCollatorPlugin.cpp  DialogInfo.cpp
sipXkamailio/src/MessageQueue/: MessageQueuePlugin.cpp  RedisSubscribeQueue.cpp
sipXkamailio/src/unit_test/: TestDialogCollator.cpp  TestDialogInfo.cpp  TestRedisSubscribeQueue.cpp  TestSuite.cpp
sipXportLib/: configure.ac  sipxportlib-ng.spec.in
sipXportLib/include/: Makefile.am
sipXportLib/include/os/: OsLogger.h
sipXportLib/include/os/linux/: OsTaskLinux.h
sipXportLib/include/os/wnt/: OsTaskWnt.h
sipXportLib/include/utl/: UtlBlockingQueue.h
sipXportLib/src/os/: OsConnectionSocket.cpp  OsServiceOptions.cpp
sipXportLib/src/os/Wnt/: OsTaskWnt.cpp
sipXportLib/src/os/linux/: OsTaskLinux.cpp
sipXportLib/src/os/shared/: OsMsgQShared.cpp
sipXproxy/: configure.ac  sipxproxy-ng.spec.in  sipxproxy.spec.in
sipXproxy/doc/cdr/: cse_database_design.txt
sipXproxy/etc/: Makefile.am  sipxproxy.cf  sipxproxy.conf.in  sipxproxy.sec.erb.in
sipXproxy/include/sipxproxy/: SipRouter.h
sipXproxy/lib/authplugins/: CallerAlertInfo.cpp  CallerAlertInfo.h  EmergencyLineIdentifier.cpp  EmergencyNotify.cpp  EnforceAuthRules.cpp  EnforceAuthRules.h  Makefile.am  PagingAlert.cpp  PagingAlert.h  SubscriptionAuth.cpp  SubscriptionAuth.h  TransferControl.cpp
sipXproxy/lib/authplugins/NatTraversalAgent/: DialogTracker.cpp
sipXproxy/lib/authplugins/test/: Makefile.am
sipXproxy/lib/transactionplugins/: CallerIdMasking.cpp  CallerIdMasking.h  Makefile.am
sipXproxy/src/: CallStateEventBuilder.cpp  CallStateEventBuilder.h  CallStateEventBuilder_DB.cpp  CallStateEventBuilder_DB.h  CallStateEventBuilder_XML.cpp  CallStateEventBuilder_XML.h  Makefile.am  SipRouter.cpp  SipXProxyCseObserver.cpp  SipXProxyCseObserver.h  sipXproxymain.cpp
sipXpublisher/: configure.ac  sipxpublisher-ng.spec.in
sipXpublisher/etc/: Makefile.am  sipxpublisher.cf  sipxpublisher.conf.in
sipXpublisher/include/statusserver/: MwiPluginQueue.h  StatusServer.h
sipXpublisher/src/statusserver/: DomainValidator.cpp  StatusServer.cpp  main.cpp
sipXregistry/: configure.ac  sipxregistry-ng.spec.in
sipXregistry/etc/: Makefile.am  sipxregistrar.cf  sipxregistrar.conf.in
sipXregistry/include/registry/: SipRedirectServer.h  SipRegistrar.h
sipXregistry/lib/redirect_plugins/: SipRedirectorAliasDB.cpp  SipRedirectorAuthRouter.cpp  SipRedirectorMapping.cpp  SipRedirectorPickUp.cpp
sipXregistry/lib/register_plugins/: Makefile.am
sipXregistry/lib/register_plugins/bla/: Makefile.am  SipBLAQueueEvent.cpp  SipBLAQueueEvent.h
sipXregistry/lib/register_plugins/bla/test/: Makefile.am  SipBLAQueueEventTest.cpp
sipXregistry/src/: RegisterEventServer.cpp  RegisterEventServer.h  SipRedirectServer.cpp  SipRegistrar.cpp  SipRegistrarServer.cpp  SipRegistrarServer.h
sipXtackLib/: configure.ac  sipxtacklib-ng.spec.in
sipXtackLib/include/net/: SipClient.h  SipClientWriteBuffer.h  SipMessage.h  SipProtocolServerBase.h  SipSubscribeServer.h  SipSubscriptionMgr.h  SipTransaction.h  SipUserAgent.h
sipXtackLib/src/net/: SipClient.cpp  SipClientWriteBuffer.cpp  SipMessage.cpp  SipProtocolServerBase.cpp  SipSubscribeServer.cpp  SipSubscriptionMgr.cpp  SipTransaction.cpp  SipUserAgent.cpp
sipXtackLib/src/test/net/: SipMessageTest.cpp
sipXtools/: configure.ac  sipxtools-ng.spec.in
sipXtools/src/: sipx-dbutil
