
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS = \
    xmlparser/tinystr.h \
    xmlparser/tinyxml.h \
    DialogEventCollator/DialogInfo.h \
    DialogEventCollator/DialogCollator.h \
    DialogEventCollator/DialogCollatorPlugin.h \
    MessageQueue/MessageQueuePlugin.h \
    MessageQueue/RedisSubscribeQueue.h

DISTCLEANFILES = Makefile.in
